--- a/azure-cloud-image-processing/Profile.ImageProcessing/Views/Images/Create.cshtml
+++ b/azure-cloud-image-processing/Profile.ImageProcessing/Views/Images/Create.cshtml
@@ -3,9 +3,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h2>Upload an Image</h2>
+<h2>Upload your Image</h2>
 
 <form method="post" enctype="multipart/form-data" asp-action="Create">
     <input type="file" name="image" />
