Added Current Date in Home Controller

--- a/azure-cloud-image-processing/Profile.ImageProcessing/Views/Home/Index.cshtml
+++ b/azure-cloud-image-processing/Profile.ImageProcessing/Views/Home/Index.cshtml
@@ -3,5 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Azure Clouds Image Processing</h1>    
+    <h1 class="display-4">Welcome to Azure Clouds Image Processing</h1>
+    <p class="display-2">@ViewData["CurrentDate"]</p>
+    
 </div>
